  * When an access denied message is displayed make sure that the login page
    displayed is in the same virtual wiki as the orginal page request.  Bug
    reported by Feilong Huang.
  * Fix several potential (although unlikely) NPE scenarios identified by
    static code analysis tools.
  * Update the CSS for pre tags to prevent overflows in tables.  Reported by
    Michael Habbert.

Translation Updates:

  * Updated Dutch translations (Angel).
  * Added Galician translations (mmeixide).
  * Updated German translations (axelclk).
  * Updated Japanese translations (nattolover).
  * Added Portugese translations (mmeixide).
  * Updated Spanish translations (AngelPinazo & mmeixide).


0.6.2
=====

New Features:

  * Upgrade project dependencies to Servlet 2.4 and JSP 2.0.  Bugs in previous
    JAMWiki configuration settings required these dependencies, so this change
    should be backwards-compatible.
  * Upgrade to JSTL 1.1.2 (from 1.0.6).
  * Make the valid login, topic name, and role name patterns configurable.
  * Replace several custom methods with the org.apache.commons.lang equivalent.
  * During setup, create a default directory to use for image and other file
    uploads to hopefully eliminate some confusion.
  * When using multiple references to the same source, use the first non-empty
    reference definition instead of using the first reference definition.
  * Make the search engine instance a configurable parameter.
  * Remove the unnecessary "Are you sure" prompt when upgrading.
  * Use JFlex Maven plugin instead of Ant task (RegisDecamps).
  * Updated spam filter patterns.

Bugfixes:

  * Resolve a CSS issue that caused the TOC to be invisible on IE6.  Reported
    by bvold.
  * Umlauts, ampersands and other special characters were being double-escaped
    in the TOC.  Fix contributed by Louis Martin.
  * Fix issue where search terms were double-escaped when no search results
    were found.